[tool.poetry]
name = "jamstack-api"
version = "0.1.0"
description = "Webhook endpoints to optimize your JAMStack static site."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/toddbirchard/jamstack-api/"
repository = "https://github.com/toddbirchard/jamstack-api/"
documentation = "https://github.com/toddbirchard/jamstack-api/blob/master/README.md"
keywords = [
  "API",
  "Rest API",
  "Automation",
  "FastAPI",
  "Webhooks"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
fastapi = "*"
pydantic = "*"
pandas = "*"
sqlalchemy = "*"
pymysql = "*"
requests = "*"
google-auth = "*"
google-cloud = "*"
google-cloud-storage = "*"
google-cloud-bigquery = "*"
pillow = "*"
python-resize-image = "*"
webp-converter = "*"
python-dotenv = "*"
pyjwt = ">=2.0"
mixpanel = "*"
loguru = "*"
twilio = "*"
boto = "*"
botocore = "*"
uvicorn = "*"
PyGithub = "*"
ddtrace-asgi = "*"
ddtrace = "*"
pyarrow = "*"
fastapi-mail = "*"
blinker = "*"
pytest = "*"
coverage = "*"
mypy = "*"
black = "*"
isort = "*"
flake8 = "*"
pylint = "*"
httpx = "^0.23.3"

[tool.poetry.scripts]
run = "asgi:app"

[tool.poetry.urls]
issues = "https://github.com/toddbirchard/jamstack-api/issues"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable="C0103,C0301,W0703,W0621"

[tool.black]
line-length = 120