[tool.poetry]
name = "blog-webhook-api"
version = "0.1.1"
description = "Webhook-driven API to make maintaining blogs easier."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/toddbirchard/blog-webhook-api/"
repository = "https://github.com/toddbirchard/blog-webhook-api/"
documentation = "https://github.com/toddbirchard/blog-webhook-api/blob/master/README.md"
keywords = ["API", "Rest API", "Automation", "FastAPI", "Webhooks"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "*"
pydantic = "*"
pandas = "*"
sqlalchemy = "*"
pymysql = "*"
requests = "*"
google-auth = "*"
google-cloud = "*"
google-cloud-storage = "*"
google-cloud-bigquery = "*"
pillow = "*"
python-resize-image = "*"
webp-converter = "*"
python-dotenv = "*"
pyjwt = ">=2.0"
mixpanel = "*"
loguru = "*"
twilio = "*"
boto = "*"
botocore = "*"
uvicorn = "*"
PyGithub = "*"
pyarrow = "*"
fastapi-mail = "*"
blinker = "*"
pytest = "*"
coverage = "*"
mypy = "*"
black = "*"
isort = "*"
flake8 = "*"
pylint = "*"
httpx = "*"
databases = "*"
aiomysql = "*"
pydantic-settings = "*"
email-validator = "*"

[tool.poetry.scripts]
run = "app:api"

[tool.poetry.urls]
issues = "https://github.com/toddbirchard/blog-webhook-api/issues"

[tool.poetry.group.dev.dependencies]
black = { version = "^23.7.0", allow-prereleases = true }

[build-system]
requires = ["poetry>=1.5.1"]
build-backend = "poetry.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable = "C0103,C0301,W0703,W0621"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "120"
